--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Cờ Tướng - Đỏ vs AI Đen</title>
+  <title>Cờ Tướng - Người vs AI</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Cờ Tướng</h1>
+  <h1>Cờ Tướng - Người vs AI</h1>
   <p id="turn">Lượt: Đỏ</p>
+
+  <div id="stats">
+    <div id="redWin">Đỏ: 50%</div>
+    <div id="blackWin">Đen: 50%</div>
+  </div>
+
   <canvas id="board" width="450" height="500"></canvas>
+
   <script src="script.js"></script>
 </body>
 </html>
