--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="UTF-8">
   <title>Cờ Tướng - Người vs AI</title>
   <link rel="stylesheet" href="style.css">
@@ -19,3 +20,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
